[tool.poetry]
name = "ia_jarvis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.2.4"
pipwin = "^0.5.0"
pyttsx3 = "^2.90"
arrow = "^0.17.0"
SpeechRecognition = "^3.8.1"
wikipedia = "^1.4.0"
PyAutoGUI = "^0.9.52"
psutil = "^5.7.3"
pyjokes = "^0.6.0"
wolframalpha = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
